# gTestPractice

./: AssertionMacros.cpp  CMakeLists.txt  GTestExample.cpp  HowToInstallGMockOnUbuntu.txt  HowToInstallGtestOnUbuntu.txt  TestFixtures.cpp
Mocking/: CMakeLists.txt  MockTurtle.hpp  MockingExample.cpp  Turtle.hpp
